--- a/views/sample.ejs
+++ b/views/sample.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--external css link-->
-    <link rel="stylesheet" type="text/css" href="styles/sample.css">
+    <link rel="stylesheet" type="text/css" href="welcome.css">
     <title>Testing Page</title>
 </head>
 <body>
