--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -19,7 +19,7 @@
         }
 
         #background{
-            background-image: url("happypeople2.png");
+            background-image: url("/STATIC/happypeople2.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
