--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -43,6 +43,17 @@
             
         }
 
+        #img1, #img2, #img3,  #img4,  #img5,  #img6,  #img7, #img8,  #img9,  #img10{
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border: 4px solid transparent;
+        }
+
+        #img1.active, #img2.active, #img3.active,  #img4.active,  #img5.active,  #img6.active,  #img7.active, #img8.active,  #img9.active,  #img10.active{
+            border-color:rgb(233, 93, 203);
+        }
+
         #submit{
            
             font-size: large;
