--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,20 @@
 <html>
     <link rel = "stylesheet" href = "/CSS/login.css" > 
 
+<style>
+
+        #img1, #img2, #img3,  #img4,  #img5,  #img6,  #img7, #img8,  #img9,  #img10{
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border: 4px solid transparent;
+        }
+
+        #img1.active, #img2.active, #img3.active,  #img4.active,  #img5.active,  #img6.active,  #img7.active, #img8.active,  #img9.active,  #img10.active{
+            border-color:rgb(233, 93, 203);
+        }
+</style>
+
     <body class = "background"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
