--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -147,7 +147,7 @@
         <div class="dashboard-content">
             <div class="profileshow" style="background-color:#b054c1">
                <img src="profilepic.png">
-               <h3> User</h3>
+               <h3> <%= user.fname %></h3>
             </div>
             <h1>Profile Information</h1>
             <p>First Name: <%= user.fname %></p>
