--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -146,7 +146,7 @@
     <main>
         <div class="dashboard-content">
             <div class="profileshow" style="background-color:#b054c1">
-               <img src="profilepic.png">
+               <img src="/STATIC/profilepic.png">
                <h3> <%= user.fname %></h3>
             </div>
             <h1>Profile Information</h1>
