--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -145,7 +145,7 @@
     </nav>
     <main>
         <div class="dashboard-content">
-            <div class="profileshow" style="background-color:#b054c1">
+            <div class="profileshow" style="background-color:#9f9f9f">
                <img src="/STATIC/profilepic.png">
                <h3> <%= user.fname %></h3>
             </div>
