--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -134,11 +134,11 @@
     <nav>
        
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="appointments.html">Appointments</a></li>
-            <li><a href="medical_records.html">Medical Records</a></li>
-            <li><a href="billing.html">Billing Process</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/appointments">Appointments</a></li>
+            <li><a href="/medicalHistory">Medical Records</a></li>
+            <li><a href="/billing">Billing Process</a></li>
+            <li><a href="/profile">Profile</a></li>
 
         </ul>
        
@@ -165,5 +165,3 @@
     </footer>
 </body>
 </html>
-
-
