--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -135,7 +135,7 @@
        
         <ul>
             <li><a href="/home">Home</a></li>
-            <li><a href="/appointments">Appointments</a></li>
+            <li><a href="/Appointment">Appointments</a></li>
             <li><a href="/medicalHistory">Medical Records</a></li>
             <li><a href="/billing">Billing Process</a></li>
             <li><a href="/profile">Profile</a></li>
