--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,13 +26,14 @@
             <ul>
                 <!-- <li><img src = "../STATIC/portaLuxBunnyLogo.png"alt = "logoImg" class = "logoImg" width = "90"></li> -->
 
-                <li><a href="home.html"  class = "home_link">Home</a></li>
+                <li><a href="/home"  class = "home_link">Home</a></li>
                 <form action="/appointments" method="POST">
                 <li><a href="/appointment">Appointments</a></li>
                 </form>
-            
-                <li><a href="medicalHistory.html" class = "nav_link" data-link>Medical Records</a></li>
-                <li><a href="billing.html">Billing Process</a></li>
+                <form action="/medicalHistory" method="POST">
+                <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
+                </form>
+                <li><a href="/billing">Billing Process</a></li>
                 <form action="/profile" method="POST">
                 <li><a href="/profile">Profile</a></li>
                 </form>
