--- a/views/Appointment.ejs
+++ b/views/Appointment.ejs
@@ -216,7 +216,7 @@
             <li><a href="home.html" >Home</a></li>
             <li><a href="appointments.html" class = "nav_link">Appointments</a></li>
             <li><a href="medicalHistory.html" >Medical Records</a></li>
-            <li><a href="Prescription">Prescription</a></li>
+            <li><a href="Prescription">Billing Process</a></li>
             <li><a href="profile.html">Profile</a></li>
         </ul>
     </nav>
