--- a/views/Appointment.ejs
+++ b/views/Appointment.ejs
@@ -213,11 +213,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="home.html" >Home</a></li>
-            <li><a href="appointments.html" class = "nav_link">Appointments</a></li>
-            <li><a href="medicalHistory.html" >Medical Records</a></li>
-            <li><a href="Prescription">Billing Process</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="/home" >Home</a></li>
+            <li><a href="/Appointment" class = "nav_link">Appointments</a></li>
+            <li><a href="/medicalHistory" >Medical Records</a></li>
+            <li><a href="/Prescription">Billing Process</a></li>
+            <li><a href="/profile">Profile</a></li>
         </ul>
     </nav>
     <main>
