--- a/views/Prescriptions.ejs
+++ b/views/Prescriptions.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prescriptions</title>
-    <link rel="stylesheet" type="text/css" href="../public/CSS/prescriptions.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/prescriptions.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 
 </head>
