--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <div class = "grid-item-2" onclick= "location.href= '/Appointment.ejs';">
+                <div class = "grid-item-2" onclick= "location.href= '/Appointment';">
                     <p> Schedule Your Annual Appointment!</p>
                 </div>
 
