--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,44 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the Creative Patient Portal</title>
-    <link rel="stylesheet" type="text/css" href="welcome.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to the  Patient Portal</h1>
-
     <link rel="stylesheet" type="text/css" href="../CSS/welcome.css">
 </head>
 <body>
     <header>
         
         <img src = "../STATIC/whiteLogoMedium.png" alt = "logo">
-        <h1> Welcome To The Portal</h1>
+        
+        
 
     </header>
 
     <div class="container">
+        <div class = "words"></div>
         <h2>Don't have an account yet?</h2>
         <p>You're just one step away from accessing our  features.</p>
+
         <form action="/signuppage" method="POST">
         <a href="/signuppage" class="button">Create Account</a>
+
         </form>
+
         <div class="space"></div>
-
-        <h2>Already have an account?</h2>
-
-        <br>
+        
         <h2>Already have an account?</h2>
         
-
         <p>Get started now and explore your patient portal.</p>
         <form action="/login" method="POST">
         <a href="/login" class="button">Login</a>
         </form>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        
+        
+        
+    
     </div>
+    
+
+    
 </body>
-
-</html>
-
-
 </html>
