--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,82 +11,116 @@
             padding: 0;
         }
 
+
         /* Overall page style */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            background-image: url(../STATIC/plantAbstrct.png);
-            
         }
 
         /* Header style */
-        header {
-            background-color: rgb(109, 75, 106);
-            color: white;
-            text-align: left;
-            padding: 10px;
-            
-            
-            
+    header {
+        background-color: rgb(109, 75, 106);
+        color: rgb(164, 102, 206) ;
+        text-align: left;
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        padding: 20px 0;
+        font-size: 28px;
+        background-image: url(../STATIC/Season\ change-amico.png);
+        background-blend-mode:soft-light;
+        background-size: 60%;
+        background-position-y: center;
+        background-position-x: right;
+        background-repeat: no-repeat;
+        text-shadow: 2px 2px 4px #918484;
+
+        
+        
+        
+    }
+
+/* Navigation menu style */
+
+/* Navigation menu style */
+    nav {
+        background-color:  rgb(230, 232, 233);
+        text-align: left;
+        padding: 1px;
+        box-shadow:2px 2px 12px #a7a3a3;
+        opacity:90%;
+        
+    }
+
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    nav li {
+        
+        float:left;
+        
+    }
+
+    nav a {
+        text-decoration: none;
+        color: #463f3f;
+        font-size: 18px;
+        display: block;
+        font-family:sans-serif;
+        font-weight: bold;
+        padding: 15px;
+        transition: background-color 0.3s;
+        
+
+    }
+
+    nav a:hover {
+        background-color: aliceblue;
+        
+        
+    }
+
+.home_link {
+    background-color: aliceblue;
+    color:#000000;
+
+    
+}
+.profileIcon {
+    width: 50px;
+    height: 50px;
+    margin:auto;
+}
+
+.home_link {
+    background-color: aliceblue;
+    color:#000000;
+}
+
+        /* Main content area style */
+        main {
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            margin: 20px;
         }
 
-        /* Navigation menu style */
-        nav {
-            background-color:  rgb(230, 232, 233);
-            text-align: left;
-            padding: 1px;
-            box-shadow:2px 2px 12px #a7a3a3;
-            opacity:90%;
-            
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        nav li {
-            
-            float:left;
-            
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #463f3f;
-            font-size: 18px;
-            display: block;
-            font-family:sans-serif;
-            font-weight: bold;
-            padding: 15px;
-            transition: background-color 0.3s;
-            
-
-        }
-
-        nav a:hover {
-            background-color: aliceblue;
-            
-            
-        }
-
-        .nav_link {
-            background-color: aliceblue;
-            color:#000000;
-        }
-        body {
-            background-color: aliceblue;
-        }
         /* Dashboard-style content */
         .dashboard-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
             text-align: center;
             padding: 40px;
         }
 
         .dashboard-content h2 {
-            font-size: 36px;
+            font-size: 28px;
             color: #b054c1;
             margin-bottom: 20px;
         }
@@ -109,6 +142,7 @@
             margin-top: 20px;
             transition: background-color 0.3s;
         }
+
         /* Footer style */
         footer {
             background-color: rgb(221, 233, 243);
@@ -116,13 +150,8 @@
             font-weight: bold;
             font-family:sans-serif;
             text-align: center;
-            padding: 10px 0;
+            padding: 20px 0;
             box-shadow:2px 2px 12px #a7a3a3;
-            position:fixed;
-            left:0px;
-            bottom:0px;
-           
-            width:100%;
         }
 
         .cta-button:hover {
@@ -130,9 +159,10 @@
         }
 
         .profileshow{
-            height:100px;
-            width:100px;
+            height:120px;
+            width:120px;
             border-radius: 50%; 
+            display: inline-block;
             
         }
 
@@ -142,34 +172,6 @@
             object-fit: cover;
             
         }
-        h1 {
-            
-            margin-bottom: 20px;
-            font-size: 40px;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-weight: lighter;
-            
-            color: #b054c1;
-            opacity: .70;
-        }
-        .profileCard {
-            border-radius: 25px;
-            padding: 50px 0px;
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-
-            text-align: center;
-            font-size: larger;
-
-            background-color: rgba(214, 210, 208, 0.39);
-            
-            margin: auto;
-            margin-top: 2%;
-            margin-bottom: 10%;
-            
-            min-width: 50%;
-            max-width: 70%;
-            height: 100%;
-        }
 
     
         
@@ -178,43 +180,54 @@
 <body>
     <header>
         
-        <img src = "../STATIC/whiteLogosmall.png"  alt = "wordLogo" >
+        <img src = "/STATIC/whiteLogoSmall.png" alt = "logoTitle" class = "logoTitle">
+        <br> 
+        <!-- <img src = "../STATIC/motto-White.png" alt = "motto" > -->
     </header>
-    <nav>
-       
-        <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/Appointment">Appointments</a></li>
-            <li><a href="/medicalHistory">Medical Records</a></li>
-            <li><a href="/billing">Billing Process</a></li>
-            <li><a href="/profile">Profile</a></li>
+    
 
-        </ul>
        
-    </nav>
+       
+    <div class = "navContainer" >
+        
+        <nav>
+            <ul>
+                <!-- <li><img src = "../STATIC/portaLuxBunnyLogo.png"alt = "logoImg" class = "logoImg" width = "90"></li> -->
+
+                <li><a href="home.html"  class = "home_link">Home</a></li>
+                <form action="/appointments" method="POST">
+                <li><a href="/appointment">Appointments</a></li>
+                </form>
+            
+                <li><a href="medicalHistory.html" class = "nav_link" data-link>Medical Records</a></li>
+                <li><a href="billing.html">Billing Process</a></li>
+                <form action="/profile" method="POST">
+                <li><a href="/profile">Profile</a></li>
+                </form>
+
+                
+            </ul>
+        </nav>
+    </div>
     <main>
         <div class="dashboard-content">
-            <div class="profileshow" style="background-color:#9f9f9f">
+            <div class="profileshow" style="background-color:#ebdede">
                <img src="/STATIC/profilepic.png">
                <h3> <%= user.fname %></h3>
             </div>
-            <div class = "profileCard">
-                <h1>Profile Information</h1>
-                <p>First Name: <%= user.fname %></p>
-                <p>Last Name: <%= user.lname %></p>
-                <p>Date of Birth: <%= user.dob %></p>
-                <p>Address: <%= user.address %></p>
-                <p>Email: <%= user.email %></p>
-                <p>Phone Number: <%= user.phone %></p>
-                <p>Gender: <%= user.gender %></p>
-            </div>
+            <h2 class="name"><%= user.fname %> <%= user.lname %></h2>
+            <p>First Name: <%= user.fname %></p>
+            <p>Last Name: <%= user.lname %></p>
+            <p>Date of Birth: <%= user.dob %></p>
+            <p>Address: <%= user.address %></p>
+            <p>Email: <%= user.email %></p>
+            <p>Phone Number: <%= user.phone %></p>
+            <p>Gender: <%= user.gender %></p>
             
         </div>
     </main>
     <footer>
-        
         <p>&copy; 2023 Patient Portal</p>
     </footer>
 </body>
-
 </html>
