--- a/views/Prescriptions.ejs
+++ b/views/Prescriptions.ejs
@@ -4,14 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prescriptions</title>
-    <link rel="stylesheet" type="text/css" href="/CSS/prescriptions.css">
+    <link rel="stylesheet" type="text/css" href="../public/CSS/prescriptions.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 
 </head>
 <body>
-    <h1 id="heading">Prescriptions</h1>
-    <div class="card-container">
-</div>
+    <header>
+        
+        <img src = "/STATIC/whiteLogoSmall.png" alt = "logoTitle" class = "logoTitle">
+        
+        <!-- <img src = "../STATIC/motto-White.png" alt = "motto" > -->
+    </header>
+    
+
+       
+       
+    <div class = "navContainer" >
+        
+        <nav>
+            <ul>
+                <!-- <li><img src = "../STATIC/portaLuxBunnyLogo.png"alt = "logoImg" class = "logoImg" width = "90"></li> -->
+
+                <li><a href="home.html"  class = "home_link">Home</a></li>
+                <form action="/appointments" method="POST">
+                <li><a href="/appointment">Appointments</a></li>
+                </form>
+            
+                <li><a href="medicalHistory.html" class = "nav_link" data-link>Medical Records</a></li>
+                <li><a href="billing.html">Billing Process</a></li>
+                <form action="/profile" method="POST">
+                <li><a href="/profile">Profile</a></li>
+                </form>
+
+                
+            </ul>
+        </nav>
+    </div>
+    <main>
+        <h1 id="heading">Prescriptions</h1>
+        <div class="card-container">
+        </div>
+    </main>
+
 <footer>
     <p>&copy; 2023 Patient Portal</p>
 </footer>
