--- a/views/Prescriptions.ejs
+++ b/views/Prescriptions.ejs
@@ -10,36 +10,19 @@
 </head>
 <body>
     <header>
-        
-        <img src = "/STATIC/whiteLogoSmall.png" alt = "logoTitle" class = "logoTitle">
-        
-        <!-- <img src = "../STATIC/motto-White.png" alt = "motto" > -->
+        <img src = "/STATIC/whiteLogoSmall.png" alt = "whiteLogo">
+        <br>
+        <img src = "/STATIC/motto-White.png" alt = "motto">
     </header>
-    
-
-       
-       
-    <div class = "navContainer" >
-        
-        <nav>
-            <ul>
-                <!-- <li><img src = "../STATIC/portaLuxBunnyLogo.png"alt = "logoImg" class = "logoImg" width = "90"></li> -->
-
-                <li><a href="home.html"  class = "home_link">Home</a></li>
-                <form action="/appointments" method="POST">
-                <li><a href="/appointment">Appointments</a></li>
-                </form>
-            
-                <li><a href="medicalHistory.html" class = "nav_link" data-link>Medical Records</a></li>
-                <li><a href="billing.html">Billing Process</a></li>
-                <form action="/profile" method="POST">
-                <li><a href="/profile">Profile</a></li>
-                </form>
-
-                
-            </ul>
-        </nav>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="/home" >Home</a></li>
+            <li><a href="/Appointment">Appointments</a></li>
+            <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
+            <li><a href="/billing">Billing Process</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </nav>
     <main>
         <h1 id="heading">Prescriptions</h1>
         <div class="card-container">
