--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -166,9 +166,9 @@
         <ul>
             <li><a href="/home" >Home</a></li>
             <li><a href="/Appointment">Appointments</a></li>
-            <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
+            <li><a href="/medicalHistory">Medical Records</a></li>
             <li><a href="/billing">Billing Process</a></li>
-            <li><a href="/profile">Profile</a></li>
+            <li><a href="/profile" class = "nav_link" data-link>Profile</a></li>
         </ul>
     </nav>
     
